--- a/css/iniad.css
+++ b/css/iniad.css
@@ -23,12 +23,18 @@ h1 {
   font-size: 24px;
   text-align: center;
   font-family: 'Sacramento', cursive;
+  padding: 30px 20px 30px 5px;
+  background-image: url(/Users/shimokawakentaro/Desktop/cs-exercise2022/cs-team2022/iniad-fake-homepage/iniad-campus.jpeg);
+  background-repeat: no-repeat;
 }
 
 h2 {
   font-size: 20px;
   color: #000000;
-  border-bottom: solid 1px #cc0000;
+  border-bottom: solid 1px whitesmoke;
+  padding: 40px 20px 30px 5px;
+  background-image: url(/Users/shimokawakentaro/Desktop/cs-exercise2022/cs-team2022/iniad-fake-homepage/iniad-campus.jpeg);
+  background-repeat: no-repeat;
 }
 
 h3 {
